opt/tp/firewall/firewall.conf
# Generated by xtables-save v1.8.2 on Wed Nov  9 18:28:32 2022
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i enp0s3 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp0s8 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i enp0s8 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o enp0s3 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Wed Nov  9 18:28:32 2022
